--- a/Jams/Mod_Jam/frogfrogfrog/index.html
+++ b/Jams/Mod_Jam/frogfrogfrog/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>Frogfrogfrog</title>
+  <title>Flying Food</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -16,6 +16,7 @@
   <script src="js/libraries/p5.min.js"></script>
   <!-- p5.sound.min.js allows us to use sound -->
   <script src="js/libraries/p5.sound.min.js"></script>
+  <script scr="https://freemusicarchive.org/music/Axletree/music-from-a-devonshire-farm-ongoing-project"></script>
 
   <!-- My script(s) -->
 
