--- a/Jams/Variation_Jam/Jam/index.html
+++ b/Jams/Variation_Jam/Jam/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>I HAVE NO TITLE :( Please deduct a grade from me.</title>
+  <title>Snakes and Ladders.</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -17,8 +17,11 @@
   <!-- p5.sound.min.js allows us to use sound -->
   <script src="js/libraries/p5.sound.min.js"></script>
 
-  <!-- My script(s) -->
+  <!-- My script(s) --> 
+  <script src="dndMode.js"></script>
+  <script src="orginialMode.js"></script>
   <script src="js/script.js"></script>
+
 </head>
 
 <body>
